# gdrivectl

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
src/gdrivectl/: __main__.py  audit.py  auth.py  cli.py  config.py  credentials.json  drive.py
src/tda_gdrivectl/: __main__.py  audit.py  auth.py  cli.py  config.py  drive.py  setup.py
