[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tda-gdrivectl"
version = "0.1.0"
description = "CLI tool to manage Google Docs permissions in bulk"
requires-python = ">=3.10"
dependencies = [
    "google-api-python-client>=2.0",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    "click>=8.0",
    "questionary>=2.0",
    "rich>=13.0",
]

[project.scripts]
tda-gdrivectl = "tda_gdrivectl.cli:cli"
